<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tutorials.RegistrationActivity"
    android:background="#E3CAA5"
    android:orientation="vertical">

    <include
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/custom_toolbar"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        android:backgroundTint="@color/black_shade"
        android:layout_gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingRight="15dp"
                android:backgroundTint="@color/black_shade"
                android:background="@drawable/card_background_selector"
                android:descendantFocusability="afterDescendants">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_form"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:textSize="26sp"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_first_name"
                    android:textSize="20sp"
                    android:textColorHint="@color/orange_shade"
                    android:textColor="@color/orange"
                    android:background="@null"/>

                <EditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_last_name"
                    android:textSize="20sp"
                    android:textColorHint="@color/orange_shade"
                    android:textColor="@color/orange"
                    android:background="@null"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email"
                    android:textSize="20sp"
                    android:textColorHint="@color/orange_shade"
                    android:textColor="@color/orange"
                    android:background="@null"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/passd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:inputType="numberPassword"
                    android:textSize="20sp"
                    android:textColorHint="@color/orange_shade"
                    android:textColor="@color/orange"
                    android:background="@null"
                    android:layout_marginTop="10dp"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/orange_shade"
                    android:textSize="20sp"
                    android:text="@string/branch_ce_it" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/gender"
                    android:id="@+id/textView4"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/orange"
                    android:layout_alignParentStart="true" />
                <RadioGroup
                    android:id="@+id/radioSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@color/orange_shade"
                        android:checked="true"
                        android:id="@+id/male" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="@color/orange_shade"
                        android:id="@+id/female"/>
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/city"
                    android:textColor="@color/orange"
                    android:id="@+id/textView5"
                    android:layout_alignParentStart="true" />
                <Spinner
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"
                    android:id="@+id/branch"
                    android:entries="@array/city"
                    android:textColor="@color/white"
                    android:textSize="11sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/profile_status"
                    android:textColor="@color/orange"
                    android:id="@+id/textView7"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentStart="true" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active_inactive"
                    android:id="@+id/activeInactive"
                    android:checked="false"
                    android:textColor="@color/orange_shade"/>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="#789395"
                    android:layout_marginTop="10sp"
                    android:layout_gravity="center"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>