<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tutorials.Tutorial02Activity"
    android:background="@color/bg"
    android:scrollbars="vertical">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/custom_toolbar"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_below="@id/tb"
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/profile"
            app:civ_border_color="@color/custom_card_color"
            app:civ_border_width="5dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_below="@id/profileImage">

            <ImageView
                android:id="@+id/ivCall"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@drawable/ic_phone" />

            <ImageView
                android:id="@+id/ivWeb"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@drawable/ic_web" />

            <ImageView
                android:id="@+id/ivMail"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@drawable/ic_mail" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ll1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_rectangle"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/_21soece13085"
                android:textColor="@color/white"
                android:textSize="23sp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/first_name_krunal"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/middle_name_pravinbhai"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/last_name_movalia"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/email_kmovalia383_rku_ac_in"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/city_rajkot"
                android:textColor="@color/white"
                android:textSize="23sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <!--<androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_rectangle"
            android:layout_alignParentBottom="true">

        </androidx.appcompat.widget.AppCompatImageView>-->

    </RelativeLayout>

</ScrollView>